# keron

./: .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  Justfile  README.md  deny.toml  justfile
crates/keron-apply/: Cargo.toml
crates/keron-apply/proptest-regressions/elevated/: payload.txt
crates/keron-apply/src/: capability.rs  confirm.rs  diff.rs  diff_tests.rs  eval.rs  eval_tests.rs  execute.rs  execute_tests.rs  lib.rs  load.rs  plan.rs  plan_tests.rs  platform.rs  report.rs  terminal_safe.rs
crates/keron-apply/src/elevated/: child.rs  chown.rs  detect.rs  mod.rs  payload.rs  safe_write.rs
crates/keron-apply/tests/: elevated.rs  packages.rs
crates/keron-cli/: Cargo.toml
crates/keron-cli/src/: error.rs  lib.rs  main.rs
crates/keron-cli/tests/: e2e.rs  elevated.rs  lsp_stdio.rs  packages.rs
crates/keron-cli/tests/fixtures/basic-dotfiles/: entry.keron  gitconfig  vimrc  zshrc
crates/keron-cli/tests/fixtures/kitchen-sink/: entry.keron  footer.txt  header.txt  helpers.keron  summary.tpl
crates/keron-cli/tests/fixtures/kitchen-sink/dotfiles/: gitconfig  vimrc  zshrc
crates/keron-cli/tests/fixtures/templates/: entry.keron  greeting.tpl  plain.tpl
crates/keron-cli/tests/fixtures/vendored-partials/: entry.keron  footer.txt  header.txt
crates/keron-engine/: Cargo.toml
crates/keron-engine/src/: apply.rs  discovery.rs  error.rs  fs_util.rs  graph.rs  lib.rs  manifest_lua.rs  pipeline.rs  plan.rs  providers.rs  secrets.rs  template.rs
crates/keron-engine/src/manifest_lua/: tests.rs
crates/keron-engine/src/plan/: tests.rs
crates/keron-lang/: Cargo.toml
crates/keron-lang/src/: ast.rs  check.rs  diagnostic.rs  lex.rs  lib.rs  parser.rs  tokens.rs  trivia.rs
crates/keron-lang/src/check/: builtins.rs  match_check.rs  mod.rs  overload.rs  suggest.rs  tests.rs
crates/keron-lang/src/check/tests/: arithmetic.rs  comparisons.rs  conditional.rs  fns.rs  keys.rs  lists.rs  literals.rs  maps.rs  matching.rs  mod.rs  nullable.rs  packages.rs  realize.rs  reconcile.rs  resources.rs  secrets.rs  shell.rs  strings.rs  vars.rs
crates/keron-lang/src/format/: emitter.rs  mod.rs  precedence.rs  string_lit.rs
crates/keron-lang/src/parser/: block.rs  depth.rs  expr.rs  fn_decl.rs  match_expr.rs  mod.rs  pattern.rs  realize.rs  reconcile.rs  string.rs  struct_decl.rs  type_alias.rs  types.rs  use_decl.rs  util.rs
crates/keron-lang/src/parser/tests/: arithmetic.rs  calls.rs  comparisons.rs  conditional.rs  decl.rs  fn_decl.rs  maps.rs  mod.rs  realize.rs  reconcile.rs  recovery.rs  string.rs
crates/keron-lang/tests/: corpus.rs  format_properties.rs  fuzz.rs  properties.proptest-regressions  properties.rs
crates/keron-lang/tests/corpus/check/: bidirectional_empty_list.keron  bidirectional_empty_list.snap  coalesce_typecheck.keron  coalesce_typecheck.snap  comparisons_typecheck.keron  comparisons_typecheck.snap  concat_typechecks.keron  concat_typechecks.snap  conditional_reconcile.keron  conditional_reconcile.snap  dotfiles_workflow.keron  dotfiles_workflow.snap  env_typechecks.keron  env_typechecks.snap  first_on_nullable_list.keron  first_on_nullable_list.snap  fn_default_referencing_earlier_param.keron  fn_default_referencing_earlier_param.snap  fn_mutual_recursion.keron  fn_mutual_recursion.snap  fn_param_shadows_outer_val.keron  fn_param_shadows_outer_val.snap  fn_typechecks.keron  fn_typechecks.snap  for_list_typechecks.keron  for_list_typechecks.snap  for_map_typechecks.keron  for_map_typechecks.snap  host_and_string_intrinsics.keron  host_and_string_intrinsics.snap  if_typechecks.keron  if_typechecks.snap  inferred_alongside_annotated.keron  inferred_alongside_annotated.snap  int_double_promotion.keron  int_double_promotion.snap  interpolation_typechecks.keron  interpolation_typechecks.snap  keron_root_typechecks.keron  keron_root_typechecks.snap  (+100 more)
crates/keron-lang/tests/corpus/errors/check/: and_non_boolean.keron  and_non_boolean.snap  block_non_void_stmt.keron  (+259 more)
crates/keron-lang/tests/corpus/parse/: add.keron  add.snap  block_multiple_effect_stmts.keron  block_multiple_effect_stmts.snap  coalesce.keron  coalesce.snap  coalesce_precedence.keron  coalesce_precedence.snap  comparison_precedence.keron  comparison_precedence.snap  comparisons.keron  comparisons.snap  concat_with_add.keron  concat_with_add.snap  dollar_no_brace_is_literal.keron  dollar_no_brace_is_literal.snap  env_call.keron  env_call.snap  escaped_dollar.keron  escaped_dollar.snap  field_access_chain.keron  field_access_chain.snap  fn_body_with_locals.keron  fn_body_with_locals.snap  fn_call_mixed.keron  fn_call_mixed.snap  fn_call_named.keron  fn_call_named.snap  fn_call_positional.keron  fn_call_positional.snap  fn_simple.keron  fn_simple.snap  fn_with_default.keron  fn_with_default.snap  for_in_fn.keron  for_in_fn.snap  for_list_simple.keron  for_list_simple.snap  for_map_simple.keron  for_map_simple.snap  (+148 more)
crates/keron-lang/tests/harness/: mod.rs  render.rs  stage.rs
crates/keron-lang/tests/support/: stdlib.rs
crates/keron-lsp/: Cargo.toml
crates/keron-lsp/src/: lib.rs  line_index.rs  span.rs  state.rs  uri.rs
crates/keron-lsp/src/analysis/: mod.rs  node_at.rs  refs.rs  symbols.rs
crates/keron-lsp/src/handlers/: code_action.rs  completion.rs  definition.rs  diagnostics.rs  document_highlight.rs  document_symbol.rs  folding_range.rs  formatting.rs  hover.rs  inlay_hint.rs  mod.rs  references.rs  render.rs  selection_range.rs  semantic_tokens.rs  signature_help.rs  workspace_symbol.rs
crates/keron-lsp/tests/: server.rs
crates/keron-modules/: Cargo.toml
crates/keron-modules/src/: graph.rs  import_path.rs  lib.rs  stdlib.rs  stdlib_docs.rs  suggestions.rs
crates/keron-modules/tests/: resolver.rs
crates/keron-report/: Cargo.toml
crates/keron-report/src/: error.rs  lib.rs  options.rs  redaction.rs  tests.rs
crates/keron-source/: Cargo.toml
crates/keron-source/src/: error.rs  lib.rs
editor/zed/: Cargo.toml  README.md  build.rs  extension.toml  rust-toolchain.toml
editor/zed/languages/keron/: config.toml  highlights.scm
editor/zed/src/: lib.rs
(+144 files in other folders)
