[workspace]
resolver = "3"
members = [
    "crates/keron-lang",
    "crates/keron-modules",
    "crates/keron-apply",
    "crates/keron-cli",
]

[workspace.package]
version = "0.5.3"
edition = "2024"
rust-version = "1.95.0"
license = "MIT"
repository = "https://github.com/icepuma/keron"
authors = ["Stefan Ruzitschka <stefan@icepuma.dev>"]

[workspace.metadata.release]
shared-version = true

[workspace.dependencies]
keron-lang = { path = "crates/keron-lang" }
keron-modules = { path = "crates/keron-modules" }
keron-apply = { path = "crates/keron-apply" }

chumsky = "=0.13.0"
thiserror = "=2.0.18"
ariadne = "=0.6.0"

anyhow = "=1.0.102"
clap = { version = "=4.6.1", features = ["derive"] }
petgraph = "=0.8.3"
os_info = { version = "=3.15.0", default-features = false }
# Cross-platform standard directories. On Linux these follow the
# XDG Base Directory spec (with documented fallbacks when the env
# vars are unset); on macOS they map to `~/Library/...` and on
# Windows to the corresponding `Known Folder`. Used by the
# `std:host` builtins (`config_dir`, `cache_dir`, etc.) so manifests
# don't have to assemble these paths by hand.
dirs = "=6.0.0"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
libc = "=0.2.186"
# Typed wrappers around POSIX/Linux syscalls (`openat`, `symlinkat`,
# `mkdirat`, `statat`, `fchownat`, …). The elevated apply path
# (`crates/keron-apply/src/elevated/safe_write.rs` and
# `chown.rs::set_owner_posix`) used to invoke these through raw
# `libc` FFI, which forced ~30 per-call-site `#[allow(unsafe_code)]`
# exemptions under the workspace `unsafe_code = "deny"` policy.
# `rustix` returns `OwnedFd` directly and accepts `&Path` arguments,
# letting us write the same syscall sequences without any `unsafe`
# in caller code.
rustix = { version = "=1.1.4", features = ["fs", "process"] }
# Cross-platform symlink creation. On Unix this forwards to
# `std::os::unix::fs::symlink`; on Windows it probes the target type
# and dispatches to `symlink_file` or `symlink_dir`. Replaces the
# hand-rolled `cfg(unix)/cfg(windows)` shim in `execute.rs`.
symlink = "=0.1.0"
# Jinja2-style template engine for `template(...)` resources.
# `default-features = false` drops the optional builtin filter
# bundle (chrono / chrono-tz / humansize / rand / slug / urlencode);
# the core engine still ships standard filters like `upper`, `lower`,
# `replace`, `default`, `trim`, `length` that are sufficient for the
# dotfile use case. The full bundle can be re-enabled later if a
# manifest needs e.g. date formatting.
tera = { version = "=1.20.1", default-features = false }
which = "=8.0.2"
# Line-level diff engine. Used by `keron format --check` for unified-
# diff drift output and by `keron apply` for the verbose-mode body
# diffs (template `content` and shell `script`) under the
# `--verbose-will-reveal-sensitive-content` flag.
similar = "=3.1.0"
# Stack-overflow defense for the user-fn call dispatch. Each
# `eval_expr` → user-fn → `eval_block_value` recursion eats a Rust
# stack frame; the depth guard at `MAX_CALL_DEPTH` is fine on the
# main thread's 8 MiB stack but the cargo-test default 2 MiB thread
# stack is too small to even reach the guard, which would surface as
# a SIGABRT instead of the clean "call depth exceeded" diagnostic.
# `stacker::maybe_grow` allocates a fresh stack segment when the
# remaining red-zone gets thin, decoupling the runtime guard from
# the host thread stack size.
stacker = "=0.1.24"
# Pinned platform binding for the elevated-rights flow on Windows:
# parent-side SID capture (`OpenProcessToken` + `GetTokenInformation` +
# `ConvertSidToStringSidW`), child-side ownership transfer
# (`SetSecurityInfo` on a `CreateFileW` handle opened with
# `FILE_FLAG_OPEN_REPARSE_POINT` so symlinks get the link's owner, not
# the target's), and the `ShellExecuteExW` re-exec with the `runas`
# verb that triggers UAC. The typed `windows` crate (vs the lower-
# level `windows-sys`) gives us `HSTRING`/`PCWSTR` for wide-string
# marshalling — that lets us drop the per-call `to_wide` helper and
# group `unsafe` per logical operation instead of per syscall. Used
# only behind `#[cfg(windows)]`.
windows = { version = "=0.62.2", default-features = false, features = [
    "std",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_Storage_FileSystem",
    "Win32_System_Registry",
    "Win32_UI_Shell",
] }

insta = "=1.47.2"
libtest-mimic = "=0.8.2"
bolero = "=0.13.4"
proptest = "=1.11.0"
# `#[mutants::skip]` markers for cargo-mutants; the crate itself is
# a no-op shim providing the attribute path so the compiler accepts
# the annotation under `cfg(test)`.
mutants = "=0.0.4"

[workspace.lints.rust]
# `deny` rather than `forbid` so test modules can opt into a small,
# well-scoped `unsafe` block (e.g. `std::env::set_var`, which became
# `unsafe` in edition 2024) via `#[allow(unsafe_code)]`. Production
# code still errors out — the lint default applies everywhere except
# the explicitly-tagged sites.
unsafe_code = "deny"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"
cargo_common_metadata = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.dev]
opt-level = 0
