[workspace]
resolver = "3"
members = [
    "crates/keron-lang",
    "crates/keron-modules",
    "crates/keron-apply",
    "crates/keron-cli",
    "crates/keron-lsp",
]
# The Zed extension is its own wasm32-wasip1 crate with a separate
# toolchain and lockfile; it must not join the native workspace build.
exclude = ["editors/zed"]

[workspace.package]
version = "0.5.3"
edition = "2024"
rust-version = "1.95.0"
license = "MIT"
repository = "https://github.com/icepuma/keron"
authors = ["Stefan Ruzitschka <stefan@icepuma.dev>"]

[workspace.metadata.release]
shared-version = true

[workspace.dependencies]
keron-lang = { path = "crates/keron-lang", version = "=0.5.3" }
keron-modules = { path = "crates/keron-modules", version = "=0.5.3" }
keron-apply = { path = "crates/keron-apply", version = "=0.5.3" }
keron-lsp = { path = "crates/keron-lsp", version = "=0.5.3" }

chumsky = "=0.13.0"
thiserror = "=2.0.18"
ariadne = "=0.6.0"
unicode-ident = "=1.0.24"

anyhow = "=1.0.103"
clap = { version = "=4.6.1", features = ["derive"] }
petgraph = "=0.8.3"
os_info = { version = "=3.15.0", default-features = false }
# Cross-platform standard directories. On Linux these follow the
# XDG Base Directory spec (with documented fallbacks when the env
# vars are unset); on macOS they map to `~/Library/...` and on
# Windows to the corresponding `Known Folder`. Used by the
# `std:host` builtins (`config_dir`, `cache_dir`, etc.) so manifests
# don't have to assemble these paths by hand.
dirs = "=6.0.0"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
sha2 = "=0.11.0"
libc = "=0.2.186"
# Typed wrappers around the `openat`/`mkdirat`/`symlinkat`/`renameat`
# family used by the Unix elevated filesystem walker. `rustix` returns
# `OwnedFd` directly and accepts `&Path`, keeping the privileged path
# fd-anchored without caller-side `unsafe`.
rustix = { version = "=1.1.4", features = ["fs", "process"] }
# Cross-platform symlink creation. On Unix this forwards to
# `std::os::unix::fs::symlink`; on Windows it probes the target type
# and dispatches to `symlink_file` or `symlink_dir`. Replaces the
# hand-rolled `cfg(unix)/cfg(windows)` shim in `execute.rs`.
symlink = "=0.1.0"
# Filesystem-identity equality (device+inode on Unix, volume serial +
# file index on Windows). Used by `classify_symlink` so the NoOp /
# Update decision asks "does this link resolve to the same file?"
# rather than comparing canonical path strings — which on Windows
# differ between `\\?\C:\…` (from `fs::canonicalize`) and `C:\…`
# (from `fs::read_link`) for the same logical path.
same-file = "=1.0.6"
# Jinja2-style template engine for `template(...)` resources.
# Tera 2's default feature set is already empty (the 1.x optional
# chrono / rand / slug filter bundle no longer exists) and its only
# builtin functions are the pure `range` / `throw` — the impure 1.x
# builtins (`get_env`, `now`, `get_random`) were removed upstream,
# which is what keeps `template(...)` a pure text transform. The
# core engine still ships standard filters like `upper`, `lower`,
# `replace`, `default`, `trim`, `length` that are sufficient for
# the dotfile use case. `default-features = false` is kept so a
# future non-empty default (e.g. `glob_fs`) can't sneak in.
tera = { version = "=2.0.0", default-features = false }
which = "=8.0.4"
# Line-level diff engine. Used by `keron format --check` for unified-
# diff drift output and by `keron apply` for the verbose-mode body
# diffs (template `content` and shell `script`) under the
# `--verbose-will-reveal-sensitive-content` flag.
similar = "=3.1.1"
# Synchronous LSP transport + protocol types (the rust-analyzer
# stack). Chosen over `tower-lsp` to avoid pulling an async runtime
# into a workspace that has none; keron modules are small enough
# that fully synchronous per-change analysis is the honest
# architecture. lsp-types 0.97 backs `Uri` with `fluent-uri` (no
# `url`/`idna` tree); file-path conversion lives in
# `keron-lsp::uri`.
lsp-server = "=0.8.0"
lsp-types = "=0.97.0"
# Stack-overflow defense for the user-fn call dispatch. Each
# `eval_expr` → user-fn → `eval_block_value` recursion eats a Rust
# stack frame; the depth guard at `MAX_CALL_DEPTH` is fine on the
# main thread's 8 MiB stack but the cargo-test default 2 MiB thread
# stack is too small to even reach the guard, which would surface as
# a SIGABRT instead of the clean "call depth exceeded" diagnostic.
# `stacker::maybe_grow` allocates a fresh stack segment when the
# remaining red-zone gets thin, decoupling the runtime guard from
# the host thread stack size.
stacker = "=0.1.24"
insta = "=1.48.0"
libtest-mimic = "=0.8.2"
bolero = "=0.13.4"
proptest = "=1.11.0"
# `#[mutants::skip]` markers for cargo-mutants; the crate itself is
# a no-op shim providing the attribute path so the compiler accepts
# the annotation under `cfg(test)`.
mutants = "=0.0.4"

[workspace.lints.rust]
# `deny` rather than `forbid` so test modules can opt into a small,
# well-scoped `unsafe` block (e.g. `std::env::set_var`, which became
# `unsafe` in edition 2024) via `#[allow(unsafe_code)]`. Production
# code still errors out — the lint default applies everywhere except
# the explicitly-tagged sites.
unsafe_code = "deny"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"
cargo_common_metadata = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.dev]
opt-level = 0
