[package]
name = "keron-apply"
description = "keron apply pipeline: plan, execute, sentinels, providers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
keron-lang.workspace = true
keron-modules.workspace = true

anyhow.workspace = true
ariadne.workspace = true
dirs.workspace = true
os_info.workspace = true
serde.workspace = true
serde_json.workspace = true
similar.workspace = true
tera.workspace = true
thiserror.workspace = true
which.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys.workspace = true

[dev-dependencies]
mutants.workspace = true
proptest.workspace = true

[lints]
workspace = true
