[package]
name = "keron-cli"
description = "keron CLI: orchestrates apply and source normalization"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "keron"
path = "src/main.rs"

[dependencies]
keron-lang.workspace = true
keron-apply.workspace = true

anyhow.workspace = true
clap.workspace = true

[dev-dependencies]
mutants.workspace = true

[lints]
workspace = true
