[package]
name = "keron-engine"
version = "0.0.1"
edition.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
mlua = { workspace = true }
sha2 = { workspace = true }
tera = { workspace = true }
which = { workspace = true }
walkdir = { workspace = true }
dirs = { workspace = true }
thiserror = { workspace = true }
rayon = { workspace = true }
keron-domain = { path = "../keron-domain" }

[dev-dependencies]
tempfile = { workspace = true }
