[package]
name = "keron-lsp"
description = "Language server for keron"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
keron-lang.workspace = true
keron-modules.workspace = true

anyhow.workspace = true
crossbeam-channel.workspace = true
lsp-server.workspace = true
lsp-types.workspace = true
serde_json.workspace = true

[lints]
workspace = true
