[package]
name = "keron-lsp"
description = "Language Server Protocol implementation for keron"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
keron-lang.workspace = true
keron-modules.workspace = true

anyhow.workspace = true
lsp-server.workspace = true
lsp-types.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
insta.workspace = true
proptest.workspace = true

[lints]
workspace = true
