[package]
name = "keron-modules"
description = "Module resolver and stdlib registry for keron"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
keron-lang.workspace = true

petgraph.workspace = true

[lints]
workspace = true
