[package]
name = "keron-report"
version = "0.0.1"
edition.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
console = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
keron-domain = { path = "../keron-domain" }
