[package]
name = "keron-source"
version = "0.0.1"
edition.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
gix = { workspace = true, default-features = false, features = ["blocking-network-client", "blocking-http-transport-reqwest-rust-tls", "worktree-mutation"] }
tempfile = { workspace = true }
url = { workspace = true }

