[package]
name = "zed-keron-extension"
description = "Zed extension wiring keron-lsp into Zed."
version = "0.0.1"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "=0.7.0"

# Self-contained workspace so the parent `keron` workspace does not
# try to build this crate against its native target.
[workspace]
