[package]
name = "zed-keron-extension"
description = "Zed extension wiring keron-lsp into Zed."
version = "0.0.1"
# 2021 instead of 2024: the Zed extension installer may pick up a
# stable toolchain older than 1.85 (the edition-2024 floor); 2021
# works on every rustc Zed could plausibly bundle.
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "=0.7.0"

# Self-contained workspace so the parent `keron` workspace does not
# try to build this crate against its native target.
[workspace]
